update calendar styling

--- a/public/calendar.html
+++ b/public/calendar.html
@@ -85,23 +85,14 @@
     <main>
       <section class="wrapper">
         <section class="month-selector">
-          <label>
-            <input
-              name="month"
-              type="radio"
-              value="9"
-              checked
-            />September</label
-          >
+          <label> <input name="month" type="radio" value="9" checked />September</label>
           <label> <input name="month" type="radio" value="10" />October</label>
           <label> <input name="month" type="radio" value="11" />November</label>
           <label> <input name="month" type="radio" value="12" />December</label>
         </section>
         <section class="calendar">
           <table class="calendar-wrapper">
-            <caption>
-              Class Calendar
-            </caption>
+            <caption></caption>
             <thead>
               <th>SUN</th>
               <th>MON</th>
