add search assignment feature for grades.html

--- a/public/grades.html
+++ b/public/grades.html
@@ -4,6 +4,7 @@
     <link rel="stylesheet" href="base.css">
     <link rel="stylesheet" href="nav.css">
     <link rel="stylesheet" href="grades.css">
+    <script src="grades.js"></script>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <title>Grades | Canvini</title>
@@ -89,8 +90,11 @@
               <th>
                 <!-- required for the search input to have a pseudo element-->
                 <div class="search-wrapper">
-                  <input type="search" placeholder="Assignment" />
-                  <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#000000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="11" cy="11" r="8"></circle><line x1="21" y1="21" x2="16.65" y2="16.65"></line></svg>
+                  <input type="search" id="assignmentSearch" placeholder="Assignment" />
+                  <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#000000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                    <circle cx="11" cy="11" r="8" fill="white"></circle>
+                    <line x1="21" y1="21" x2="16.65" y2="16.65"></line>
+                  </svg>
                 </div>
               </th>
               <th aria-haspopup="true">
