finalize grade.js

--- a/public/grades.html
+++ b/public/grades.html
@@ -98,9 +98,7 @@
                 </div>
               </th>
               <th aria-haspopup="true">
-                <button aria-label="Filter by Assignment Category">
-                  Category
-                </button>
+                <button id="categorySort" aria-label="Filter by Assignment Category">Category</button>
                 <ul
                   id="category-filter-menu"
                   class="hidden filter-menu"
@@ -108,7 +106,7 @@
                 ></ul>
               </th>
               <th aria-haspopup="true">
-                <button aria-label="Filter by Week due">Date Due</button>
+                <button id="dateSort" aria-label="Filter by Week due">Date Due</button>
                 <ul
                   id="week-filter-menu"
                   class="hidden filter-menu"
